testsuite/tests/typecheck/should_fail/tcfail127.stderr

tcfail127.hs:3:8: error:
    • Illegal qualified type: Num a => a -> a
    • In the type signature: foo :: IO (Num a => a -> a)
    Suggested fix: Perhaps you intended to use ImpredicativeTypes
